Fix spacing on onboarding forms

--- a/esper.com/less/time/_onboarding.less
+++ b/esper.com/less/time/_onboarding.less
@@ -49,10 +49,6 @@
     border-radius: @border-radius-small;
   }
 
-  .onboarding-team + .onboarding-team, .esper-expando + .esper-expando {
-    margin-top: @padding-large-vertical;
-  }
-
   .esper-expando-body {
     .esper-select-menu {
       margin-left: -@esper-base-padding;
@@ -85,15 +81,6 @@
       .close-action + .form-set {
         margin-right: @onboarding-close-action-width;
       }
-    }
-  }
-
-  .add-team-div {
-    padding: @padding-small-vertical 0;
-    margin-top: @padding-small-vertical;
-
-    .esper-expando & {
-      border-top: 1px solid @brand-border;
     }
   }
 }
